--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -35,6 +35,7 @@
     "blessed": "^0.1.81",
     "chalk": "^3.0.0",
     "check-types": "^11.1.2",
+    "chokidar": "^3.3.1",
     "color-convert": "^2.0.1",
     "console-pos": "^1.0.2",
     "core-js": "^3.6.4",
@@ -98,6 +99,7 @@
     "prompts": "^2.3.2",
     "renderkid": "^2.0.3",
     "rxjs": "^5.5.12",
+    "sass": "^1.26.3",
     "scss-parser": "^1.0.4",
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
@@ -133,6 +135,7 @@
     "mutation-observer": "^1.0.3",
     "mutationobserver-shim": "^0.3.5",
     "node-persist": "^3.0.5",
+    "node-sass": "^4.14.0",
     "pretty-error": "^2.1.1",
     "puppeteer": "^2.1.1",
     "replace-in-files": "^2.0.3",
