--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -31,6 +31,7 @@
     "ansi-escapes": "^4.3.0",
     "app-root-path": "^3.0.0",
     "autoprefixer": "^9.7.6",
+    "await-spawn": "^3.0.0",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "blessed": "^0.1.81",
@@ -38,6 +39,7 @@
     "check-types": "^11.1.2",
     "chokidar": "^3.3.1",
     "color-convert": "^2.0.1",
+    "command-exists": "^1.2.9",
     "console-pos": "^1.0.2",
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
@@ -108,6 +110,7 @@
     "sass": "^1.26.3",
     "scss-bundle": "^3.1.1",
     "scss-parser": "^1.0.4",
+    "semver": "^7.3.2",
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
