--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -115,6 +115,7 @@
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
+    "strip-ansi": "^6.0.0",
     "striptags": "^3.1.1",
     "temp-dir": "^2.0.0",
     "terminal-kit": "^1.35.2",
