--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -92,6 +92,7 @@
     "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
     "module-alias": "^2.2.2",
+    "neo-blessed": "^0.2.0",
     "node-machine-id": "^1.1.12",
     "nodemailer": "^6.4.2",
     "object-diff": "0.0.4",
