--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -80,6 +80,7 @@
     "jss": "^10.0.3",
     "jss-plugin-global": "^10.0.3",
     "jss-plugin-vendor-prefixer": "^10.0.3",
+    "keypress": "^0.2.1",
     "kill-port-process": "^2.2.1",
     "lodash": "^4.17.15",
     "log-with-style": "^0.3.0",
@@ -120,6 +121,7 @@
     "striptags": "^3.1.1",
     "temp-dir": "^2.0.0",
     "terminal-kit": "^1.35.2",
+    "terminal-link": "^2.1.1",
     "terminal-overwrite": "^2.0.1",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
