--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -59,6 +59,7 @@
     "fastdom": "^1.0.9",
     "filesize": "^6.0.1",
     "find-package-json": "^1.2.0",
+    "fmt-obj": "^2.0.0",
     "forever": "^2.0.0",
     "form-serialize": "^0.7.2",
     "fs-extra": "^6.0.1",
@@ -100,7 +101,7 @@
     "object-diff": "0.0.4",
     "object-encode": "^1.0.2",
     "on-change": "^1.6.2",
-    "ora": "^4.0.3",
+    "ora": "^4.0.4",
     "parse-error": "^0.2.0",
     "postcss": "^7.0.27",
     "postcss-preset-env": "^6.7.0",
