--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.9.5",
     "@ungap/custom-elements-builtin": "^0.1.2",
     "ansi-escapes": "^4.3.0",
     "app-root-path": "^3.0.0",
@@ -57,13 +58,16 @@
     "easing": "^1.2.1",
     "envinfo": "^7.5.0",
     "es6-object-assign": "^1.1.0",
+    "extends-classes": "^1.0.5",
     "fastdom": "^1.0.9",
     "filesize": "^6.0.1",
     "find-package-json": "^1.2.0",
+    "fkill": "^7.0.1",
     "fmt-obj": "^2.0.0",
     "forever": "^2.0.0",
     "form-serialize": "^0.7.2",
     "fs-extra": "^6.0.1",
+    "func-to-classes": "^1.0.0",
     "get-folder-size": "^2.0.1",
     "get-parameter-names": "^0.3.0",
     "hotkeys-js": "^3.7.3",
@@ -97,6 +101,7 @@
     "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
     "module-alias": "^2.2.2",
+    "multiple-extend": "^0.1.2",
     "neo-blessed": "^0.2.0",
     "node-machine-id": "^1.1.12",
     "nodemailer": "^6.4.2",
@@ -127,6 +132,7 @@
     "terminal-kit": "^1.35.2",
     "terminal-link": "^2.1.1",
     "terminal-overwrite": "^2.0.1",
+    "tree-kill": "^1.2.2",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
