--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^9.7.6",
     "await-spawn": "^3.0.0",
     "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
     "base-64": "^0.1.0",
     "blessed": "^0.1.81",
     "chalk": "^3.0.0",
@@ -137,6 +138,7 @@
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
+    "webpack": "^4.43.0",
     "winston": "^3.2.1",
     "winston-mail": "^2.0.0",
     "winston-slack-webhook-transport": "^1.1.0",
@@ -144,10 +146,10 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.10.1",
     "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.10.1",
     "@coffeekraken/docblock-parser": "0.0.1",
     "@shopify/jest-dom-mocks": "^2.8.11",
     "@testing-library/jest-dom": "^5.3.0",
