--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -71,6 +71,7 @@
     "func-to-classes": "^1.0.0",
     "get-folder-size": "^2.0.1",
     "get-parameter-names": "^0.3.0",
+    "glob-parent": "^5.1.1",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
     "image-pixels": "^2.2.2",
@@ -82,6 +83,7 @@
     "is-base64": "^1.0.0",
     "is-class": "0.0.9",
     "is-equal": "^1.6.1",
+    "is-glob": "^4.0.1",
     "is-plain-object": "^3.0.0",
     "is-valid-path": "^0.1.1",
     "json-to-scss": "^1.5.0",
@@ -135,6 +137,7 @@
     "terminal-link": "^2.1.1",
     "terminal-overwrite": "^2.0.1",
     "tree-kill": "^1.2.2",
+    "uglify-js": "^3.9.4",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
