--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -114,6 +114,7 @@
     "ora": "^4.0.4",
     "parse-error": "^0.2.0",
     "postcss": "^7.0.27",
+    "postcss-discard-comments": "^4.0.2",
     "postcss-preset-env": "^6.7.0",
     "precss": "^4.0.0",
     "prepend-file": "^1.3.1",
