--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -78,6 +78,7 @@
     "get-folder-size": "^2.0.1",
     "get-parameter-names": "^0.3.0",
     "glob-parent": "^5.1.1",
+    "handlebars": "^4.7.6",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
     "image-pixels": "^2.2.2",
@@ -112,6 +113,7 @@
     "mobile-detect": "^1.4.4",
     "module-alias": "^2.2.2",
     "multiple-extend": "^0.1.2",
+    "mustache": "^4.0.1",
     "neo-blessed": "^0.2.0",
     "node-machine-id": "^1.1.12",
     "node-notifier": "^7.0.1",
