--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-transform-classes": "^7.9.5",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
     "@hapi/hapi": "^19.1.1",
     "@hapi/inert": "^6.0.1",
     "@ungap/custom-elements-builtin": "^0.1.2",
