--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -50,6 +50,7 @@
     "command-exists": "^1.2.9",
     "console-pos": "^1.0.2",
     "copy-anything": "^2.0.1",
+    "copy-to": "^2.0.1",
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "css": "^2.2.4",
@@ -67,6 +68,7 @@
     "easing": "^1.2.1",
     "ejs": "^3.1.3",
     "ejs-lint": "^1.1.0",
+    "entities": "^2.0.3",
     "envinfo": "^7.5.0",
     "es6-object-assign": "^1.1.0",
     "exec-php": "0.0.5",
@@ -102,6 +104,7 @@
     "is-valid-path": "^0.1.1",
     "jade": "^1.11.0",
     "jsdom": "^16.2.2",
+    "json-sass-vars": "^3.1.0",
     "json-to-scss": "^1.5.0",
     "jss": "^10.0.3",
     "jss-plugin-global": "^10.0.3",
