--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,10 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  sugar-test:
     executor:
       name: node/default
+    working_directory: ~/util/sugar
     steps:
       - checkout
       - node/with-cache:
@@ -12,6 +13,6 @@ jobs:
             - run: npm install
             - run: npm test
 workflows:
-    build-and-test:
+    sugar-test:
       jobs:
-        - build-and-test
+        - sugar-test
