--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "build.js": "rm -rf dist && babel src/js -d js --ignore 'src/**/*.spec.js','src/**/*.test.js'"
+    "build.js": "rm -rf dist && babel src/js -d js --config-file ./.sugar/babel.config.js --ignore 'src/**/*.spec.js','src/**/*.test.js'"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -26,13 +26,16 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.9.5",
+    "@babel/plugin-transform-classes": "^7.10.3",
     "@babel/plugin-transform-modules-commonjs": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.10.3",
     "@babel/preset-env": "^7.10.1",
     "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/runtime": "^7.10.3",
     "@hapi/hapi": "^19.1.1",
     "@hapi/inert": "^6.0.1",
     "@ungap/custom-elements-builtin": "^0.1.2",
+    "aggregation": "^1.2.6",
     "ansi-escapes": "^4.3.0",
     "app-root-path": "^3.0.0",
     "async-exit-hook": "^2.0.1",
@@ -45,6 +48,7 @@
     "chalk": "^3.0.0",
     "check-types": "^11.1.2",
     "chokidar": "^3.3.1",
+    "class-mixins": "^0.1.2",
     "color-convert": "^2.0.1",
     "command-exists": "^1.2.9",
     "console-pos": "^1.0.2",
@@ -112,6 +116,7 @@
     "jss-plugin-vendor-prefixer": "^10.0.3",
     "keypress": "^0.2.1",
     "kill-port-process": "^2.2.1",
+    "lit-html": "^1.2.1",
     "lodash": "^4.17.15",
     "log-with-style": "^0.3.0",
     "make-dir": "^3.0.0",
@@ -121,6 +126,7 @@
     "merge-deep": "^3.0.2",
     "micromatch": "^4.0.2",
     "minimatch": "^3.0.4",
+    "mix-classes": "^1.1.10",
     "mixin-deep": "^2.0.1",
     "mkdirp": "^0.5.1",
     "mobile-detect": "^1.4.4",
@@ -167,6 +173,7 @@
     "terminal-kit": "^1.35.2",
     "terminal-link": "^2.1.1",
     "terminal-overwrite": "^2.0.1",
+    "terser": "^4.8.0",
     "tmp": "^0.2.1",
     "tree-kill": "^1.2.2",
     "uglify-js": "^3.9.4",
@@ -193,7 +200,7 @@
     "mutation-observer": "^1.0.3",
     "mutationobserver-shim": "^0.3.5",
     "node-persist": "^3.0.5",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "pretty-error": "^2.1.1",
     "puppeteer": "^2.1.1",
     "replace-in-files": "^2.0.3",
