--- a/webcomponents/s-filtrable-input/package.json
+++ b/webcomponents/s-filtrable-input/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@coffeekraken/sugar": "^2.0.0"
+    "@coffeekraken/sugar": "^2.0.0",
+    "aggregation": "^1.2.6"
   }
 }
