--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "build.js": "rm -rf dist && babel src/js -d js --config-file ./.sugar/babel.config.js --ignore 'src/**/*.spec.js','src/**/*.test.js'"
+    "build.js": "rm -rf dist && babel src/js -d js --config-file ./.sugar/babel.config.js -w --ignore 'src/**/*.spec.js','src/**/*.test.js'"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
