adding a wonderfull function from by collegue João who is wonderfull also

--- a/util/sugar/package.json
+++ b/util/sugar/package.json
@@ -104,7 +104,7 @@
     "is-class": "0.0.9",
     "is-equal": "^1.6.1",
     "is-glob": "^4.0.1",
-    "is-plain-object": "^3.0.0",
+    "is-plain-object": "^3.0.1",
     "is-valid-path": "^0.1.1",
     "jade": "^1.11.0",
     "js-striphtml": "^1.1.2",
@@ -134,6 +134,7 @@
     "multiple-extend": "^0.1.2",
     "mustache": "^4.0.1",
     "neo-blessed": "^0.2.0",
+    "node-clean-exit": "^0.2.1",
     "node-machine-id": "^1.1.12",
     "node-notifier": "^7.0.1",
     "node-sass-glob-importer": "^5.3.2",
