--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -49,6 +49,7 @@
     "check-types": "^11.1.2",
     "chokidar": "^3.3.1",
     "class-mixins": "^0.1.2",
+    "clear": "^0.1.0",
     "color-convert": "^2.0.1",
     "command-exists": "^1.2.9",
     "console-pos": "^1.0.2",
@@ -155,6 +156,7 @@
     "pretty": "^2.0.0",
     "printf": "^0.5.3",
     "prompts": "^2.3.2",
+    "ps-list": "^7.2.0",
     "q-i": "^2.0.1",
     "query-string": "^6.12.1",
     "renderkid": "^2.0.3",
