--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -101,6 +101,7 @@
     "in-viewport": "^3.6.0",
     "inline-style-prefixer": "^6.0.0",
     "inquirer": "^7.1.0",
+    "iohook": "^0.6.6",
     "is-base64": "^1.0.0",
     "is-class": "0.0.9",
     "is-equal": "^1.6.1",
@@ -115,6 +116,7 @@
     "jss": "^10.0.3",
     "jss-plugin-global": "^10.0.3",
     "jss-plugin-vendor-prefixer": "^10.0.3",
+    "key-events": "^0.1.1",
     "keypress": "^0.2.1",
     "kill-port-process": "^2.2.1",
     "lit-html": "^1.2.1",
