--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -78,6 +78,7 @@
     "exec-php": "0.0.5",
     "express": "^4.17.1",
     "extends-classes": "^1.0.5",
+    "fast-safe-stringify": "^2.0.7",
     "fastdom": "^1.0.9",
     "filesize": "^6.0.1",
     "find-package-json": "^1.2.0",
@@ -170,6 +171,7 @@
     "sass-loader": "^8.0.2",
     "scss-bundle": "^3.1.1",
     "scss-parser": "^1.0.4",
+    "search-query-parser": "^1.5.5",
     "semver": "^7.3.2",
     "simple-ajax": "^2.6.0",
     "sprintf-js": "^1.1.2",
