--- a/toolkits/sugar-ui/package.json
+++ b/toolkits/sugar-ui/package.json
@@ -2,6 +2,7 @@
   "name": "@coffeekraken/sugar-webapp",
   "version": "0.0.1",
   "description": "Sugar webapp that is used to develop nice and clean modern websites",
+  "homepage": "https://coffeekraken.io",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
