--- a/webcomponents/s-filtrable-input/package.json
+++ b/webcomponents/s-filtrable-input/package.json
@@ -2,6 +2,7 @@
   "name": "@coffeekraken/s-filtrable-input",
   "version": "1.0.0",
   "description": "Filtrable input",
+  "homepage": "https://coffeekraken.io",
   "main": "src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
