--- a/webcomponents/s-iframe/package.json
+++ b/webcomponents/s-iframe/package.json
@@ -2,11 +2,16 @@
   "name": "@coffeekraken/s-iframe-webcomponent",
   "version": "1.0.0",
   "description": "Extended iframe features like auto-resize, etc...",
+  "homepage": "https://coffeekraken.io",
   "main": "src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
+  "contributors": [
+    "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
+    "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)"
+  ],
   "license": "MIT",
   "dependencies": {
     "@coffeekraken/sugar": "file:../../toolkits/sugar"
