--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -49,6 +49,7 @@
     "check-types": "^11.1.2",
     "chokidar": "^3.3.1",
     "class-mixins": "^0.1.2",
+    "clean-text-utils": "^1.1.17",
     "clear": "^0.1.0",
     "color-convert": "^2.0.1",
     "command-exists": "^1.2.9",
@@ -75,6 +76,7 @@
     "entities": "^2.0.3",
     "envinfo": "^7.5.0",
     "es6-object-assign": "^1.1.0",
+    "escape-string-regexp": "^4.0.0",
     "exec-php": "0.0.5",
     "express": "^4.17.1",
     "extends-classes": "^1.0.5",
