--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -41,10 +41,12 @@
     "async-exit-hook": "^2.0.1",
     "autoprefixer": "^9.7.6",
     "await-spawn": "^3.0.0",
+    "await-to-js": "^2.1.1",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "blade": "^3.3.1",
     "blessed": "^0.1.81",
+    "bluebird": "^3.7.2",
     "chalk": "^3.0.0",
     "check-types": "^11.1.2",
     "chokidar": "^3.3.1",
