--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Sugar CI
 
 on:
   push:
@@ -31,4 +31,4 @@ jobs:
     - name: Sugar tests
       run: npm install && npm test
       shell: bash
-      working-directory: ./util/sugar
+      working-directory: ./toolkits/sugar
