--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -86,6 +86,7 @@
     "fast-safe-stringify": "^2.0.7",
     "fastdom": "^1.0.9",
     "filesize": "^6.0.1",
+    "find-in-files": "^0.5.0",
     "find-package-json": "^1.2.0",
     "fkill": "^7.0.1",
     "fmt-obj": "^2.0.0",
@@ -118,6 +119,7 @@
     "is-valid-path": "^0.1.1",
     "jade": "^1.11.0",
     "jest": "^26.2.2",
+    "jest-useragent-mock": "^0.1.1",
     "js-striphtml": "^1.1.2",
     "jsdom": "^16.2.2",
     "json-sass-vars": "^3.1.0",
