--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@testing-library/jest-dom": "^5.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
+    "eslint": "^7.8.0",
     "find-in-files": "^0.5.0",
     "jest": "^25.2.7",
     "jest-localstorage-mock": "^2.4.0",
@@ -67,6 +68,7 @@
     "mutationobserver-shim": "^0.3.5",
     "node-persist": "^3.0.5",
     "node-sass": "^4.14.1",
+    "prettier": "2.1.1",
     "pretty-error": "^2.1.1",
     "puppeteer": "^2.1.1",
     "replace-in-files": "^2.0.3",
