--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -61,6 +61,7 @@
     "clean-text-utils": "^1.1.17",
     "clear": "^0.1.0",
     "cli-highlight": "^2.1.4",
+    "clipboardy": "^2.3.0",
     "color-convert": "^2.0.1",
     "command-exists": "^1.2.9",
     "console-pos": "^1.0.2",
