--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -43,6 +43,7 @@
     "ansi-escapes": "^4.3.0",
     "app-root-path": "^3.0.0",
     "async-exit-hook": "^2.0.1",
+    "async-helpers": "^0.3.17",
     "autoprefixer": "^9.7.6",
     "await-spawn": "^3.0.0",
     "await-to-js": "^2.1.1",
@@ -111,6 +112,7 @@
     "glob-to-regexp": "^0.4.1",
     "globby": "^11.0.1",
     "handlebars": "^4.7.6",
+    "handlebars-async": "^1.0.0",
     "handlebars-loader": "^1.7.1",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
@@ -185,6 +187,7 @@
     "prepend-file": "^1.3.1",
     "pretty": "^2.0.0",
     "printf": "^0.5.3",
+    "promised-handlebars": "^2.0.1",
     "prompts": "^2.3.2",
     "ps-list": "^7.2.0",
     "ps-tree": "^1.2.0",
