--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -54,6 +54,7 @@
     "base-64": "^0.1.0",
     "blade": "^3.3.1",
     "blessed": "^0.1.81",
+    "block-parser": "^1.0.1",
     "bluebird": "^3.7.2",
     "chalk": "^3.0.0",
     "check-types": "^11.1.2",
@@ -111,6 +112,7 @@
     "glob-parent": "^5.1.1",
     "glob-to-regexp": "^0.4.1",
     "globby": "^11.0.1",
+    "gonzales-pe": "^4.3.0",
     "handlebars": "^4.7.6",
     "handlebars-async": "^1.0.0",
     "handlebars-loader": "^1.7.1",
@@ -201,6 +203,7 @@
     "sass-loader": "^8.0.2",
     "scss-bundle": "^3.1.1",
     "scss-parser": "^1.0.4",
+    "scss-tokenizer": "^0.4.2",
     "search-query-parser": "^1.5.5",
     "semver": "^7.3.2",
     "simple-ajax": "^2.6.0",
