--- a/toolkits/sugar-ui/package.json
+++ b/toolkits/sugar-ui/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@coffeekraken/sugar": "file:../sugar",
+    "@coffeekraken/s-filtrable-input": "file:../../webcomponents/s-filtrable-input",
     "codemirror": "^5.57.0"
   }
 }
