--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -172,6 +172,7 @@
     "node-ipc": "^9.1.1",
     "node-machine-id": "^1.1.12",
     "node-notifier": "^7.0.1",
+    "node-sass": "^4.14.1",
     "node-sass-glob-importer": "^5.3.2",
     "nodemailer": "^6.4.2",
     "object-diff": "0.0.4",
@@ -201,6 +202,7 @@
     "sanitize.css": "^11.0.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "sass-resources-loader": "^2.1.1",
     "scss-bundle": "^3.1.1",
     "scss-parser": "^1.0.4",
     "scss-tokenizer": "^0.4.2",
