--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -94,6 +94,7 @@
     "exec-php": "0.0.5",
     "express": "^4.17.1",
     "extends-classes": "^1.0.5",
+    "fantasticon": "^1.0.9",
     "fast-safe-stringify": "^2.0.7",
     "fastdom": "^1.0.9",
     "filesize": "^6.0.1",
@@ -159,6 +160,7 @@
     "merge-anything": "^3.0.2",
     "merge-deep": "^3.0.2",
     "micromatch": "^4.0.2",
+    "mime-types": "^2.1.27",
     "minimatch": "^3.0.4",
     "mix-classes": "^1.1.10",
     "mixin-deep": "^2.0.1",
@@ -224,6 +226,7 @@
     "tmp": "^0.2.1",
     "to-regex": "^3.0.2",
     "tree-kill": "^1.2.2",
+    "ttf2woff2": "^3.0.0",
     "uglify-js": "^3.9.4",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
