--- a/toolkits/sugar-ui/package.json
+++ b/toolkits/sugar-ui/package.json
@@ -5,13 +5,32 @@
   "homepage": "https://coffeekraken.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init": "snowpack",
+    "dev": "snowpack dev --polyfill-node",
+    "build": "snowpack build"
   },
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
   "dependencies": {
-    "@coffeekraken/sugar": "file:../sugar",
     "@coffeekraken/s-filtrable-input": "file:../../webcomponents/s-filtrable-input",
-    "codemirror": "^5.57.0"
+    "@coffeekraken/sugar": "file:../sugar",
+    "@snowpack/plugin-babel": "^0.6.2",
+    "@snowpack/plugin-sass": "^1.1.1",
+    "parcel-bundler": "^1.12.4",
+    "postcss": "7.0.30",
+    "postcss-easings": "^2.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-import-url": "^5.1.0",
+    "postcss-preset-env": "6.7.0",
+    "snowpack": "^2.15.1"
+  },
+  "devDependencies": {
+    "@csstools/postcss-sass": "^4.0.0",
+    "postcss-cli": "^7.1.1",
+    "postcss-scss": "^3.0.2",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-scss": "^2.6.1"
   }
 }
