--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -238,6 +238,7 @@
     "yargs-parser": "^18.1.3"
   },
   "devDependencies": {
+    "snowpack": "^2.15.1",
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7"
   }
