--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -118,6 +118,7 @@
     "handlebars-loader": "^1.7.1",
     "hotkeys-js": "^3.7.3",
     "html2canvas": "^1.0.0-rc.5",
+    "icon-font-buildr": "^1.3.4",
     "icon-font-generator": "^2.1.10",
     "image-pixels": "^2.2.2",
     "imaging": "^2.1.2",
@@ -224,6 +225,7 @@
     "tmp": "^0.2.1",
     "to-regex": "^3.0.2",
     "tree-kill": "^1.2.2",
+    "ttf2woff2": "^3.0.0",
     "uglify-js": "^3.9.4",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
