--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -21,92 +21,97 @@
     "build.js": "rm -rf dist && babel src/js -d ./js --copy-files --config-file ./.sugar-default/babel.config.js -w --ignore 'src/**/*.spec.js','src/**/*.test.js'"
   },
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.10.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-export-default-from": "^7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
-    "@babel/plugin-transform-classes": "^7.10.3",
-    "@babel/plugin-transform-literals": "^7.10.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.9.0",
-    "@babel/plugin-transform-runtime": "^7.10.3",
-    "@babel/plugin-transform-strict-mode": "^7.10.4",
-    "@babel/preset-env": "^7.10.1",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
+    "@babel/plugin-proposal-numeric-separator": "^7.12.1",
+    "@babel/plugin-transform-classes": "^7.12.1",
+    "@babel/plugin-transform-literals": "^7.12.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-strict-mode": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/runtime": "^7.10.3",
-    "@hapi/hapi": "^19.1.1",
-    "@hapi/inert": "^6.0.1",
+    "@babel/runtime": "^7.12.1",
+    "@hapi/hapi": "^20.0.1",
+    "@hapi/inert": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@snowpack/plugin-babel": "^2.1.4",
+    "@snowpack/plugin-dotenv": "^2.0.4",
+    "@snowpack/plugin-postcss": "^1.0.7",
+    "@snowpack/plugin-sass": "^1.1.1",
     "@std/esm": "^0.26.0",
-    "@ungap/custom-elements-builtin": "^0.1.2",
+    "@ungap/custom-elements-builtin": "^0.6.3",
     "aggregation": "^1.2.6",
-    "ansi-escapes": "^4.3.0",
+    "ansi-escapes": "^4.3.1",
     "app-root-path": "^3.0.0",
     "async-exit-hook": "^2.0.1",
     "async-helpers": "^0.3.17",
-    "autoprefixer": "^9.7.6",
-    "await-spawn": "^3.0.0",
+    "autoprefixer": "^10.0.1",
+    "await-spawn": "^4.0.1",
     "await-to-js": "^2.1.1",
-    "axios": "^0.19.2",
-    "babel-jest": "^26.2.2",
-    "babel-plugin-add-module-exports": "^1.0.2",
+    "axios": "^0.21.0",
+    "babel-jest": "^26.6.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
-    "base-64": "^0.1.0",
+    "base-64": "^1.0.0",
     "blade": "^3.3.1",
     "blessed": "^0.1.81",
     "block-parser": "^1.0.1",
     "bluebird": "^3.7.2",
-    "chalk": "^3.0.0",
+    "chalk": "^4.1.0",
     "check-types": "^11.1.2",
-    "chokidar": "^3.3.1",
+    "chokidar": "^3.4.3",
     "class-mixins": "^0.1.2",
     "clean-text-utils": "^1.1.17",
     "clear": "^0.1.0",
     "cli-highlight": "^2.1.4",
     "clipboardy": "^2.3.0",
-    "codemirror": "^5.57.0",
+    "codemirror": "^5.58.2",
     "color-convert": "^2.0.1",
     "command-exists": "^1.2.9",
     "console-pos": "^1.0.2",
     "copy-anything": "^2.0.1",
     "copy-to": "^2.0.1",
-    "core-js": "^3.6.4",
-    "crypto-js": "^3.1.9-1",
-    "css": "^2.2.4",
-    "css-loader": "^3.6.0",
+    "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
+    "css": "^3.0.0",
+    "css-loader": "^5.0.0",
     "cssnano": "^4.1.10",
     "custom-event": "^1.0.1",
     "deep-diff": "^1.0.2",
     "deep-map": "^2.0.0",
     "deepmerge": "^4.2.2",
-    "document-register-element": "^1.14.3",
+    "document-register-element": "^1.14.10",
     "domready": "^1.0.8",
     "dotenv": "^8.2.0",
     "download-file": "^0.1.5",
-    "downloads-folder": "^1.0.2",
+    "downloads-folder": "^3.0.1",
     "easing": "^1.2.1",
-    "ejs": "^3.1.3",
+    "ejs": "^3.1.5",
     "ejs-lint": "^1.1.0",
-    "entities": "^2.0.3",
-    "envinfo": "^7.5.0",
+    "entities": "^2.1.0",
+    "envinfo": "^7.7.3",
     "es6-object-assign": "^1.1.0",
     "escape-string-regexp": "^4.0.0",
     "exec-php": "0.0.5",
     "express": "^4.17.1",
     "extends-classes": "^1.0.5",
-    "fantasticon": "^1.0.9",
+    "fantasticon": "^1.0.11",
     "fast-safe-stringify": "^2.0.7",
     "fastdom": "^1.0.9",
-    "filesize": "^6.0.1",
+    "filesize": "^6.1.0",
     "find-in-files": "^0.5.0",
     "find-package-json": "^1.2.0",
     "fkill": "^7.0.1",
     "fmt-obj": "^2.0.0",
-    "forever": "^2.0.0",
+    "forever": "^3.0.2",
     "form-serialize": "^0.7.2",
-    "fs-extra": "^6.0.1",
+    "fs-extra": "^9.0.1",
     "func-to-classes": "^1.0.0",
-    "fuse.js": "^6.4.0",
+    "fuse.js": "^6.4.3",
     "get-folder-size": "^2.0.1",
     "get-parameter-names": "^0.3.0",
     "glob": "^7.1.6",
@@ -117,55 +122,55 @@
     "handlebars": "^4.7.6",
     "handlebars-async": "^1.0.0",
     "handlebars-loader": "^1.7.1",
-    "hotkeys-js": "^3.7.3",
-    "html2canvas": "^1.0.0-rc.5",
+    "hotkeys-js": "^3.8.1",
+    "html2canvas": "^1.0.0-rc.7",
     "icon-font-buildr": "^1.3.4",
-    "icon-font-generator": "^2.1.10",
+    "icon-font-generator": "^2.1.11",
     "image-pixels": "^2.2.2",
     "imaging": "^2.1.2",
     "in-view": "^0.6.1",
     "in-viewport": "^3.6.0",
     "inline-style-prefixer": "^6.0.0",
-    "inquirer": "^7.1.0",
+    "inquirer": "^7.3.3",
     "iohook": "^0.6.6",
     "ip": "^1.1.5",
-    "is-base64": "^1.0.0",
+    "is-base64": "^1.1.0",
     "is-class": "0.0.9",
     "is-equal": "^1.6.1",
     "is-glob": "^4.0.1",
-    "is-plain-object": "^3.0.1",
+    "is-plain-object": "^5.0.0",
     "is-valid-path": "^0.1.1",
     "jade": "^1.11.0",
-    "jest": "^26.2.2",
+    "jest": "^26.6.2",
     "jest-useragent-mock": "^0.1.1",
     "js-striphtml": "^1.1.2",
-    "jsdom": "^16.2.2",
+    "jsdom": "^16.4.0",
     "json-cyclic": "^1.0.2",
     "json-sass-vars": "^3.1.0",
-    "json-to-scss": "^1.5.0",
-    "jss": "^10.0.3",
-    "jss-plugin-global": "^10.0.3",
-    "jss-plugin-vendor-prefixer": "^10.0.3",
+    "json-to-scss": "^1.6.2",
+    "jss": "^10.4.0",
+    "jss-plugin-global": "^10.4.0",
+    "jss-plugin-vendor-prefixer": "^10.4.0",
     "key-events": "^0.1.1",
     "keypress": "^0.2.1",
-    "kill-port-process": "^2.2.1",
-    "lit-html": "^1.2.1",
-    "lodash": "^4.17.15",
+    "kill-port-process": "^2.3.0",
+    "lit-html": "^1.3.0",
+    "lodash": "^4.17.20",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "log-with-style": "^0.3.0",
     "lorem-ipsum": "^2.0.3",
-    "make-dir": "^3.0.0",
+    "make-dir": "^3.1.0",
     "markdown-chalk": "^2.1.0",
-    "marked": "^1.1.0",
-    "merge-anything": "^3.0.2",
+    "marked": "^1.2.2",
+    "merge-anything": "^3.0.6",
     "merge-deep": "^3.0.2",
     "micromatch": "^4.0.2",
     "mime-types": "^2.1.27",
     "minimatch": "^3.0.4",
     "mix-classes": "^1.1.10",
     "mixin-deep": "^2.0.1",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "^1.0.4",
     "mobile-detect": "^1.4.4",
     "module-alias": "^2.2.2",
     "multiple-extend": "^0.1.2",
@@ -176,39 +181,41 @@
     "node-clean-exit": "^0.2.1",
     "node-ipc": "^9.1.1",
     "node-machine-id": "^1.1.12",
-    "node-notifier": "^7.0.1",
-    "node-sass": "^4.14.1",
+    "node-notifier": "^8.0.0",
+    "node-sass": "^5.0.0",
     "node-sass-glob-importer": "^5.3.2",
-    "nodemailer": "^6.4.2",
+    "nodemailer": "^6.4.14",
     "object-diff": "0.0.4",
     "object-encode": "^1.0.2",
-    "on-change": "^1.6.2",
-    "ora": "^4.0.4",
+    "on-change": "^2.2.0",
+    "ora": "^5.1.0",
     "param-case": "^3.0.3",
     "parse-error": "^0.2.0",
-    "php": "0.0.1",
-    "postcss": "^7.0.27",
+    "php": "1.0.1",
+    "postcss": "^8.1.4",
     "postcss-discard-comments": "^4.0.2",
     "postcss-preset-env": "^6.7.0",
-    "postcss-scss": "^2.1.1",
+    "postcss-scss": "^3.0.2",
     "precss": "^4.0.0",
-    "prepend-file": "^1.3.1",
+    "prepend-file": "^2.0.0",
     "pretty": "^2.0.0",
-    "printf": "^0.5.3",
+    "printf": "^0.6.0",
     "promised-handlebars": "^2.0.1",
-    "prompts": "^2.3.2",
+    "prompts": "^2.4.0",
     "ps-list": "^7.2.0",
     "ps-tree": "^1.2.0",
     "q-i": "^2.0.1",
-    "query-string": "^6.12.1",
-    "renderkid": "^2.0.3",
-    "request": "^2.79.0",
-    "rxjs": "^5.5.12",
-    "sanitize.css": "^11.0.1",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
+    "query-string": "^6.13.6",
+    "react": "^17.0.1",
+    "renderkid": "^2.0.4",
+    "request": "^2.88.2",
+    "rollup-plugin-scss": "^2.6.1",
+    "rxjs": "^6.6.3",
+    "sanitize.css": "^12.0.1",
+    "sass": "^1.28.0",
+    "sass-loader": "^10.0.5",
     "sass-resources-loader": "^2.1.1",
-    "scss-bundle": "^3.1.1",
+    "scss-bundle": "^3.1.2",
     "scss-parser": "^1.0.4",
     "scss-tokenizer": "^0.4.2",
     "search-query-parser": "^1.5.5",
@@ -218,29 +225,29 @@
     "stringify-object": "^3.3.0",
     "strip-ansi": "^6.0.0",
     "striptags": "^3.1.1",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "temp-dir": "^2.0.0",
-    "terminal-kit": "^1.35.2",
+    "terminal-kit": "^1.44.0",
     "terminal-link": "^2.1.1",
     "terminal-overwrite": "^2.0.1",
-    "terser": "^4.8.0",
+    "terser": "^5.3.8",
     "tmp": "^0.2.1",
     "to-regex": "^3.0.2",
     "tree-kill": "^1.2.2",
     "ttf2woff2": "^3.0.0",
-    "uglify-js": "^3.9.4",
+    "uglify-js": "^3.11.5",
     "uniqid": "^5.2.0",
     "unquote": "^1.1.1",
     "url-parse": "^1.4.7",
-    "webpack": "^4.43.0",
-    "winston": "^3.2.1",
+    "webpack": "^5.3.2",
+    "winston": "^3.3.3",
     "winston-mail": "^2.0.0",
-    "winston-slack-webhook-transport": "^1.1.0",
-    "yargs-parser": "^18.1.3"
+    "winston-slack-webhook-transport": "^2.0.0",
+    "yargs-parser": "^20.2.3"
   },
   "devDependencies": {
-    "snowpack": "^2.15.1",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7"
+    "snowpack": "^2.16.1",
+    "ts-loader": "^8.0.7",
+    "typescript": "^4.0.5"
   }
 }
