--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -209,6 +209,7 @@
     "react": "^17.0.1",
     "renderkid": "^2.0.4",
     "request": "^2.88.2",
+    "rollup-plugin-embed-css": "^1.0.19",
     "rollup-plugin-scss": "^2.6.1",
     "rxjs": "^6.6.3",
     "sanitize.css": "^12.0.1",
