--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -37,11 +37,14 @@
     "@babel/runtime": "^7.12.1",
     "@hapi/hapi": "^20.0.1",
     "@hapi/inert": "^6.0.3",
+    "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-url": "^5.0.1",
     "@snowpack/plugin-babel": "^2.1.4",
     "@snowpack/plugin-dotenv": "^2.0.4",
     "@snowpack/plugin-postcss": "^1.0.7",
     "@snowpack/plugin-sass": "^1.1.1",
+    "@snowpack/plugin-webpack": "^2.1.1",
     "@std/esm": "^0.26.0",
     "@ungap/custom-elements-builtin": "^0.6.3",
     "aggregation": "^1.2.6",
@@ -209,8 +212,11 @@
     "react": "^17.0.1",
     "renderkid": "^2.0.4",
     "request": "^2.88.2",
+    "rollup": "^2.33.1",
     "rollup-plugin-embed-css": "^1.0.19",
     "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-styles": "^3.11.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rxjs": "^6.6.3",
     "sanitize.css": "^12.0.1",
     "sass": "^1.28.0",
@@ -222,6 +228,7 @@
     "search-query-parser": "^1.5.5",
     "semver": "^7.3.2",
     "simple-ajax": "^2.6.0",
+    "snowpack-plugin-rollup-bundle": "^0.3.3",
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
     "strip-ansi": "^6.0.0",
