--- a/toolkits/sugar-ui/package.json
+++ b/toolkits/sugar-ui/package.json
@@ -9,7 +9,7 @@
     "clean": "del dist",
     "init": "snowpack --config ../sugar/snowpack.config.js --reload --polyfill-node",
     "dev": "npm run clean && snowpack dev --config ../sugar/snowpack.config.js --reload --polyfill-node",
-    "build": "npm run clean && snowpack build --config ../sugar/snowpack.config.js --reload --polyfill-node"
+    "build": "npm run clean && SNOWPACK_IS_BUILD=true snowpack build --config ../sugar/snowpack.config.js --reload --polyfill-node"
   },
   "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)",
   "license": "MIT",
