--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/runtime": "^7.12.1",
+    "@babel/traverse": "^7.12.5",
     "@hapi/hapi": "^20.0.1",
     "@hapi/inert": "^6.0.3",
     "@rollup/plugin-commonjs": "^16.0.0",
@@ -71,6 +72,7 @@
     "blessed": "^0.1.81",
     "block-parser": "^1.0.1",
     "bluebird": "^3.7.2",
+    "browser-resolve": "^2.0.0",
     "builtin-modules": "^3.1.0",
     "chalk": "^4.1.0",
     "check-types": "^11.1.2",
@@ -93,6 +95,7 @@
     "css-loader": "^5.0.0",
     "cssnano": "^4.1.10",
     "custom-event": "^1.0.1",
+    "decomment": "^0.9.3",
     "deep-diff": "^1.0.2",
     "deep-map": "^2.0.0",
     "deepmerge": "^4.2.2",
