--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-        "**/sugar/js/**": true,
+        // "**/sugar/js/**": true,
         "**/sugar/node/**": true,
         "**/sugar/src/node/_js": true
     }
