--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -172,6 +172,7 @@
     "kill-port-process": "^2.3.0",
     "lit-html": "^1.3.0",
     "lodash": "^4.17.20",
+    "lodash-node": "^3.10.2",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "log-with-style": "^0.3.0",
@@ -203,6 +204,7 @@
     "node-sass-chokidar": "^1.5.0",
     "node-sass-glob-importer": "^5.3.2",
     "nodemailer": "^6.4.14",
+    "object-assign": "^4.1.1",
     "object-diff": "0.0.4",
     "object-encode": "^1.0.2",
     "on-change": "^2.2.0",
@@ -251,6 +253,7 @@
     "sprintf-js": "^1.1.2",
     "stringify-object": "^3.3.0",
     "strip-ansi": "^6.0.0",
+    "strip-css-comments": "^4.1.0",
     "striptags": "^3.1.1",
     "style-loader": "^2.0.0",
     "temp-dir": "^2.0.0",
@@ -258,6 +261,7 @@
     "terminal-link": "^2.1.1",
     "terminal-overwrite": "^2.0.1",
     "terser": "^5.3.8",
+    "through2": "^4.0.2",
     "tmp": "^0.2.1",
     "to-regex": "^3.0.2",
     "tree-kill": "^1.2.2",
