--- a/toolkits/sugar/package.json
+++ b/toolkits/sugar/package.json
@@ -279,6 +279,7 @@
     "yargs-parser": "^20.2.3"
   },
   "devDependencies": {
+    "prettier": "^2.1.2",
     "snowpack": "^2.16.1",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5"
