--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -45,3 +45,5 @@ RUN apt -y install git-all
 # installing global npm packages
 RUN npm i -g typescript
 RUN npm i -g standard
+RUN npm i -g ts-standard
+RUN npm i -g jest
