--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "npm run dev.js; npm run dev.node",
     "dev.js": "tsc -p tsconfig.js.json --watch",
     "dev.node": "tsc -p tsconfig.node.json --watch",
+    "lint": "eslint 'packages/**/*.{js,ts,tsx}' --quiet --fix",
     "container": "docker exec -it coffeekraken /bin/bash",
     "init-sugar": "(cd toolkits/sugar && npm link && npm i)"
   },
@@ -48,30 +49,29 @@
     "@shopify/jest-dom-mocks": "^2.8.11",
     "@testing-library/jest-dom": "^5.3.0",
     "@types/node": "^14.14.8",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
-    "eslint": "^7.8.0",
+    "eslint": "^7.14.0",
     "find-in-files": "^0.5.0",
     "jest": "^25.2.7",
     "jest-localstorage-mock": "^2.4.0",
     "jest-puppeteer": "^4.4.0",
     "jest-useragent-mock": "^0.1.1",
-    "lerna": "^3.22.1",
-    "lerna-wizard": "^1.1.1",
     "local-storage": "^2.0.0",
     "mutation-observer": "^1.0.3",
     "mutationobserver-shim": "^0.3.5",
     "node-persist": "^3.0.5",
     "node-sass": "^4.14.1",
-    "prettier": "2.1.1",
+    "prettier": "^2.1.1",
     "pretty-error": "^2.1.1",
     "puppeteer": "^2.1.1",
     "replace-in-files": "^2.0.3",
     "rimraf": "^3.0.2",
     "semistandard": "^16.0.0",
     "symlink-dir": "^3.1.1",
-    "ts-standard": "^9.0.0",
-    "typescript": "^4.0.5",
+    "typescript": "^4.1.2",
     "webpack-cli": "^3.3.10"
   }
 }
