--- a/package.json
+++ b/package.json
@@ -48,12 +48,15 @@
   "devDependencies": {
     "@shopify/jest-dom-mocks": "^2.8.11",
     "@testing-library/jest-dom": "^5.3.0",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
     "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "find-in-files": "^0.5.0",
     "jest": "^25.2.7",
     "jest-localstorage-mock": "^2.4.0",
