--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -75,7 +75,7 @@
     "class-mixins": "^0.1.2",
     "clean-text-utils": "^1.1.17",
     "clear": "^0.1.0",
-    "cli-highlight": "^2.1.4",
+    "cli-highlight": "^2.1.9",
     "clipboardy": "^2.3.0",
     "codemirror": "^5.58.2",
     "color-convert": "^2.0.1",
@@ -133,6 +133,7 @@
     "handlebars": "^4.7.6",
     "handlebars-async": "^1.0.0",
     "handlebars-loader": "^1.7.1",
+    "highlight.js": "^10.4.0",
     "hotkeys-js": "^3.8.1",
     "html2canvas": "^1.0.0-rc.7",
     "icon-font-buildr": "^1.3.4",
@@ -215,6 +216,7 @@
     "precss": "^4.0.0",
     "prepend-file": "^2.0.0",
     "pretty": "^2.0.0",
+    "pretty-format": "^26.6.2",
     "printf": "^0.6.0",
     "promised-handlebars": "^2.0.1",
     "prompts": "^2.4.0",
