--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -82,6 +82,7 @@
     "command-exists": "^1.2.9",
     "console-pos": "^1.0.2",
     "copy-anything": "^2.0.1",
+    "copy-paste": "^1.3.0",
     "copy-to": "^2.0.1",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
