--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -130,6 +130,7 @@
     "glob": "^7.1.6",
     "glob-parent": "^5.1.1",
     "glob-to-regexp": "^0.4.1",
+    "glob-watcher": "^5.0.5",
     "globby": "^11.0.1",
     "gonzales-pe": "^4.3.0",
     "handlebars": "^4.7.6",
